# mave

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SYNOPSIS.md
extlib/: .gitignore
mave/: allocator.hpp  forward.hpp  macros.hpp  matrix.hpp  mave.hpp  type_traits.hpp  vector.hpp
mave/avx/: vector3d.hpp  vector3f.hpp  vector3f_approx.hpp
mave/avx2/: fma.hpp  matrix3x3d.hpp  matrix3x3f.hpp  vector3d.hpp  vector3d_fma.hpp  vector3f.hpp  vector3f_approx.hpp  vector3f_fma.hpp  vector_matrix_mul.hpp
mave/avx512/: fma.hpp  matrix3x3d.hpp  matrix3x3f.hpp  vector3d.hpp  vector3d_approx.hpp  vector3d_fma.hpp  vector3f.hpp  vector3f_approx.hpp  vector3f_fma.hpp
mave/avx512f/: matrix3x3d.hpp  matrix3x3f.hpp  vector3d.hpp  vector3d_approx.hpp  vector3f.hpp  vector3f_approx.hpp
mave/fma/: fma.hpp
samples/: CMakeLists.txt  check.cpp
tests/: CMakeLists.txt  generate_random_matrices.hpp  test_add.cpp  test_ceil.cpp  test_construction.cpp  test_cross_product.cpp  test_div.cpp  test_dot_product.cpp  test_floor.cpp  test_fma.cpp  test_fmadd.cpp  test_fmsub.cpp  test_fnmadd.cpp  test_fnmsub.cpp  test_length.cpp  test_length_sq.cpp  test_mat_vec_mul.cpp  test_max.cpp  test_min.cpp  test_mul.cpp  test_neg.cpp  test_regularize.cpp  test_rlength.cpp  test_sub.cpp  tolerance.hpp
